@@ -30,8 +30,9 @@ mxRun <- function(model) {
 	depModel <- omxReplaceModels(model, independents)
 	flatModel <- omxFlattenModel(depModel, namespace)
 	data <- convertDatasets(flatModel)
-    flatModel <- convertAlgebras(flatModel)
-	omxCheckFreeVariables(flatModel, namespace)
+	freeFixedValues <- omxCheckVariables(flatModel, namespace)
+    flatModel <- convertAlgebras(flatModel, list(startvals=freeFixedValues, 
+        values=namespace$values, parameters=namespace$parameters))
 	checkAlgebras(model, flatModel)
 	parameters <- generateParameterList(flatModel)
 	definitions <- generateDefinitionList(flatModel)
