@@ -21,7 +21,7 @@ b <- mxMatrix(values = matrix(2, 1, 1), name = 'b')
 c <- mxMatrix(values = matrix(3, 1, 1), name = 'c')
 d <- mxMatrix(values = matrix(4, 1, 1), name = 'd')
 
-e <- mxMatrix(labels = c('a','b','c','d'), 
+e <- mxMatrix(labels = c('a[1,1]','b[1,1]','c[1,1]','d[1,1]'), 
 	nrow = 2, ncol = 2, byrow = TRUE, name = 'e')
 
 model <- mxModel(a, b, c, d, e)
